test_regress/t/t_wait_fork.out
%Error-UNSUPPORTED: t/t_wait_fork.v:17:7: Unsupported: wait fork statements
                                        : ... note: In instance 't'
   17 |       wait fork;
      |       ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
